--- a/19/index.html
+++ b/19/index.html
@@ -13,14 +13,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="fullwimg.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
+    <div class='element-19 position-relative'>
+        <div class='top-0 zindex-19'>
+            <div>TODO TEXT WIDGET</div>
+        </div>
+        <div class="fullw-img-19" style="background-image: url('https://via.placeholder.com/1920x1080/CC333311');">
+            <img class="d-md-none img-src-19" src='https://via.placeholder.com/1920x1080/CC333311'>
+        </div>
+        <div class='cta-19'>
+            <button>CALL TO ACTION</button>
+        </div>        
 
-
+    </div>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -29,7 +39,6 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src='script.js'></script>
 </body>
 
 </html>
