--- a/24/index.html
+++ b/24/index.html
@@ -13,15 +13,33 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="fullwimg.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
+    <div style='height:700px;background:red;'></div>
 
 
+    <div class='container-fluid'>
+        <div class='row'>
+            <div class='d-flex flex-row'>
+                <div class='text-24 flex-fill'>
+                    Text
+                </div>
+                <div class='visual-24' id='add-id-here'>
+                    <div class='img-content-24'>
+                        BRT
+                        <img src='https://via.placeholder.com/1080x1600'>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </div>
+
+    <div style='height:2000px;background:red;'></div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
