--- a/8/index.html
+++ b/8/index.html
@@ -19,31 +19,35 @@
 
 <body>
 
-    <div class="align-items-start">
+    <div class="align-items-start element-8" id="testelement">
 
-        <div class="tab-content" id="v-pills-tabContent">
+        <div class="tab-content">
             <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-tab-1">
+                <div>Tekst1</div>
                 <img class='img-tab-8' src='https://via.placeholder.com/800/C33'>
             </div>
             <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-tab-2">
+                <div>Tekst2</div>
                 <img class='img-tab-8' src='https://via.placeholder.com/800/5D2'>
             </div>
             <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-tab-3">
+                <div>Tekst3</div>
                 <img class='img-tab-8' src='https://via.placeholder.com/800/25D'>
             </div>
             <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-tab-4">
+                <div>Tekst4</div>
                 <img class='img-tab-8' src='https://via.placeholder.com/800/588'>
             </div>
         </div>
 
-        <div class='d-flex flex-wrap justify-content-center' id="v-pills-img">
+        <div class='d-flex flex-wrap justify-content-center' id="v-pills-img-testelement">
             <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/C33'></div>
             <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/5D2'></div>
             <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/25D'></div>
             <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/588'></div>
         </div>
 
-        <div class="nav flex-column nav-pills text-start pills-8" id="v-pills-tab" role="tablist"
+        <div class="nav flex-column nav-pills text-start pills-8" id="v-pills-tab-testelement" role="tablist"
             aria-orientation="vertical">
             <button class="nav-link active" id="v-pills-tab-1" data-bs-toggle="pill" data-bs-target="#v-pills-1"
                 type="button" role="tab" aria-controls="v-pills-1" aria-selected="true">
