--- a/24/index.html
+++ b/24/index.html
@@ -21,7 +21,7 @@
 
     <div style='height:700px;background:red;'></div>
 
-    <div class='container-fluid'>
+    <div class='container-fluid container-24'>
         <div class='row'>
             <div class='d-md-flex flex-24 '>
                 <div class='visual-24 flex-shrink-0' id='add-id-here'>
