--- a/24/index.html
+++ b/24/index.html
@@ -26,7 +26,9 @@
             <div class='d-md-flex flex-24 '>
                 <div class='visual-24 flex-shrink-0' id='add-id-here'>
                     <div class='img-content-24'>
-                        BRT
+                        <div>
+                            BRT
+                        </div>
                         <img src='https://via.placeholder.com/1080x1600'>
                     </div>
                 </div>
