--- a/21/index.html
+++ b/21/index.html
@@ -19,15 +19,9 @@
 
 <body>
 
-    <div class="element-11 position-relative">
-        <img src='https://via.placeholder.com/1080x610' class='img-11'>
-        <div class="text-11 w-100 h-100 position-absolute">
-            <div class='d-flex h-100 w-100'>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad odio ipsum sit laboriosam eos nemo repellat
-                culpa esse reprehenderit sint.
-            </div>
-        </div>
-    </div>
+
+    
+
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
@@ -35,7 +29,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+    <script src='script.js'></script>
 </body>
 
 </html>
