--- a/blank.html
+++ b/blank.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
     <link rel="stylesheet" href="../global.css">
-    <link rel="stylesheet" href="fullwimg.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
