--- a/21/index.html
+++ b/21/index.html
@@ -19,7 +19,67 @@
 
 <body>
 
+    <div class='container-fluid element-21' id='testel'>
+        <div class='row'>
+            <div class='col-12'>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
 
+            <div class='col-12 col-md-6'>
+                <div class='position-relative big-21' id='big-21-testel'>
+                    <img class='big-image-21' src='https://via.placeholder.com/1500'>
+                    <div class='dot-21' id='dot-21-testel-1'></div>
+                    <div class='dot-21' id='dot-21-testel-2'></div>
+                    <div class='dot-21' id='dot-21-testel-3'></div>
+                    <div class='dot-21' id='dot-21-testel-4'></div>
+                </div>
+            </div>
+
+            <div class='col-12 col-md-6'>
+                <div class='d-flex flex-column h-100'>
+                    <div class='tab-content flex-grow-1'>
+                        <div class="tab-pane fade show active" id="h-pills-1" role="tabpanel"
+                            aria-labelledby="h-pills-tab-1">
+                            Tekst1 
+                        </div>
+                        <div class="tab-pane fade" id="h-pills-2" role="tabpanel" aria-labelledby="h-pills-tab-2">
+                            Tekst2
+                        </div>
+                        <div class="tab-pane fade" id="h-pills-3" role="tabpanel" aria-labelledby="h-pills-tab-3">
+                            Tekst3
+                        </div>
+                        <div class="tab-pane fade" id="h-pills-4" role="tabpanel" aria-labelledby="h-pills-tab-4">
+                            Tekst4
+                        </div>
+                    </div>
+                    <div class="nav flex-row flex-wrap nav-pills text-start justify-content-center pills-21"
+                        id="h-pills-tabs-21-testel" aria-orientation="horizontal" role="tablist">
+                        <button class="nav-link active" id="h-pills-tab-1" data-bs-toggle="pill"
+                            data-bs-target="#h-pills-1" type="button" role="tab" aria-controls="h-pills-1"
+                            aria-selected="true">
+                            <img class='img-button-21' src='https://via.placeholder.com/150'>
+                            Home
+                        </button>
+                        <button class="nav-link" id="h-pills-tab-2" data-bs-toggle="pill" data-bs-target="#h-pills-2"
+                            type="button" role="tab" aria-controls="h-pills-2" aria-selected="false">
+                            <img class='img-button-21' src='https://via.placeholder.com/150'>
+                            Products
+                        </button>
+                        <button class="nav-link" id="h-pills-tab-3" data-bs-toggle="pill" data-bs-target="#h-pills-3"
+                            type="button" role="tab" aria-controls="h-pills-3" aria-selected="false">
+                            <img class='img-button-21' src='https://via.placeholder.com/150'>
+                            Members
+                        </button>
+                        <button class="nav-link" id="h-pills-tab-4" data-bs-toggle="pill" data-bs-target="#h-pills-4"
+                            type="button" role="tab" aria-controls="h-pills-4" aria-selected="false">
+                            <img class='img-button-21' src='https://via.placeholder.com/150'>
+                            Subscribe
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
 
