--- a/21/index.html
+++ b/21/index.html
@@ -28,10 +28,10 @@
             <div class='col-12 col-md-6'>
                 <div class='position-relative big-21' id='big-21-testel'>
                     <img class='big-image-21' src='https://via.placeholder.com/1500'>
-                    <div class='dot-21' id='dot-21-testel-1'></div>
-                    <div class='dot-21' id='dot-21-testel-2'></div>
-                    <div class='dot-21' id='dot-21-testel-3'></div>
-                    <div class='dot-21' id='dot-21-testel-4'></div>
+                    <div class='dot-21 filtered' id='dot-21-testel-1'></div>
+                    <div class='dot-21 filtered' id='dot-21-testel-2'></div>
+                    <div class='dot-21 filtered' id='dot-21-testel-3'></div>
+                    <div class='dot-21 filtered' id='dot-21-testel-4'></div>
                 </div>
             </div>
 
