--- a/tabs/index.html
+++ b/tabs/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div class='col-12 col-md-6 v-center order-md-1'>
                             <div class='progress w-100 progress-25'>
-                                <div class='progress-bar w-75' role='progressbar' aria-valuenow='75' aria-valuemin='0'
+                                <div class='progress-bar start-transition' style='width:75%' role='progressbar' aria-valuenow='75' aria-valuemin='0'
                                     aria-valuemax='100'></div>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class='col-12 col-md-6 v-center order-md-1'>
                             <div class='progress w-100 progress-25'>
-                                <div class='progress-bar' style='width: 23%' role='progressbar' aria-valuenow='23' aria-valuemin='0'
+                                <div class='progress-bar start-transition' style='width: 23%' role='progressbar' aria-valuenow='23' aria-valuemin='0'
                                     aria-valuemax='100'></div>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                         </div>
                         <div class='col-12 col-md-6 v-center order-md-1'>
                             <div class='progress w-100 progress-25'>
-                                <div class='progress-bar' style='width: 55%' role='progressbar' aria-valuenow='55' aria-valuemin='0'
+                                <div class='progress-bar start-transition' style='width: 55%' role='progressbar' aria-valuenow='55' aria-valuemin='0'
                                     aria-valuemax='100'></div>
                             </div>
                         </div>
