--- a/26/index.html
+++ b/26/index.html
@@ -26,11 +26,11 @@
                 <h2>Lorem ipsum dolor sit amet</h2>
             </div>
             <div class='d-flex dots-26' id='custom-id-dots-26'>
-                <div id='custom-id-26-dot-1' class='dot-26'></div>
-                <div id='custom-id-26-dot-2' class='dot-26'></div>
-                <div id='custom-id-26-dot-3' class='dot-26'></div>
-                <div id='custom-id-26-dot-4' class='dot-26'></div>
-                <div id='custom-id-26-dot-5' class='dot-26'></div>
+                <div class='dot-26'></div>
+                <div class='dot-26'></div>
+                <div class='dot-26'></div>
+                <div class='dot-26'></div>
+                <div class='dot-26'></div>
             </div>
         </div>
         <div class='bot-26 d-flex flex-row'>
@@ -41,8 +41,12 @@
                 <img class='img-26' src='https://via.placeholder.com/1500x800/2d9'>
                 <img class='img-26' src='https://via.placeholder.com/1500x800/18b'>
             </div>
-            <div class='static-26'>
-                <img src='https://via.placeholder.com/1500x800/34d'>
+            <div class='static-26' id='custom-id-static-26'>
+                <img class='still-img-26 active-26' src='https://via.placeholder.com/1500x800/772'>
+                <img class='still-img-26' src='https://via.placeholder.com/1500x800/234'>
+                <img class='still-img-26' src='https://via.placeholder.com/1500x800/44e'>
+                <img class='still-img-26' src='https://via.placeholder.com/1500x800/3ea'>
+                <img class='still-img-26' src='https://via.placeholder.com/1500x800/29c'>
             </div>
 
         </div>
