--- a/22/index.html
+++ b/22/index.html
@@ -22,23 +22,31 @@
     <p>
         Balling
     </p>
-    <div class='wrapper'>
-        <div id='fullview' class='element-22'>
-            <div>
-                <p>Section 1</p>
+    <div id='fullpage' class='element-22'>
+        <div class='wrapper'>
+            <div class='section'>
+                <div class='content-22'>
+                    <p>Section 1</p>
+                </div>
             </div>
-            <div>
-                <p>Section 2</p>
+            <div class='section'>
+                <div class='content-22'>
+                    <p>Section 2</p>
+                </div>
             </div>
-            <div>
-                <p>Section 3</p>
+            <div class='section'>
+                <div class='content-22'>
+                    <p>Section 3</p>
+                </div>
             </div>
-            <div>
-                <p>Section 4</p>
+            <div class='section'>
+                <div class='content-22'>
+                    <p>Section 4</p>
+                </div>
             </div>
         </div>
     </div>
-    
+
     <p>
         We're out!!!
     </p>
@@ -51,6 +59,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
     <script src='script.js'></script>
 
 </body>
