--- a/26/index.html
+++ b/26/index.html
@@ -25,7 +25,11 @@
             <div class='me-auto'>
                 <h2>Lorem ipsum dolor sit amet</h2>
             </div>
-            <div class='d-flex dots-26' id='custom-id-dots-26'>
+            <div class='d-flex dots-26 flex-wrap' id='custom-id-dots-26'>
+                <div id='custom-id-pause-26' class='dot-26 dot-pause-26'>
+                    <i class="far fa-pause-circle"></i>
+                    <i class="far fa-play-circle d-none"></i>
+                </div>
                 <div class='dot-26'></div>
                 <div class='dot-26'></div>
                 <div class='dot-26'></div>
