--- a/23/index.html
+++ b/23/index.html
@@ -19,32 +19,37 @@
 
 <body>
 
-    <div style='height: 30vh;'>
+    <div style='height: 30vh;background-color: red;'>
+    </div>
+    <div class='wrapper-23' id='customid'>
+        <div class='element-23'>
+            <div class='margin-div-23'></div>
+            <div class="maintext-23">
+                <h2>Lorem ipsum dolor sit amet</h2>
+            </div>
+            <div class='left-23'>
+                <div class='extratext-23'>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ad dolores consequatur voluptate,
+                    tempore sit eveniet dolorem repudiandae iste, velit quos quidem accusamus aperiam vel incidunt quis?
+                    Exercitationem, culpa explicabo?
+                </div>
+                <div class='ltext-23 text-23'>
+                    L
+                </div>
+                <img src='https://via.placeholder.com/500x500'>
+            </div>
+            <div class='right-23'>
+                <div class='rtext-23 text-23'>
+                    R
+                </div>
+                <img src='https://via.placeholder.com/500x500'>
+            </div>
+        </div>
     </div>
 
-    <div class='element-23' id='customid'>
-        <div class="maintext-23">
-            <h2>Lorem ipsum dolor sit amet</h2>
-        </div>
-        <div class='left-23'>
-            <div class='extratext-23'>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </div>
-            <div class='ltext-23 text-23'>
-                L
-            </div>
-            <img src='https://via.placeholder.com/500x500'>
-        </div>
-        <div class='right-23'>
-            <div class='rtext-23 text-23'>
-                R
-            </div>
-            <img src='https://via.placeholder.com/500x500'>
-        </div>
+    <div style='height: 100vh;background-color: red;'>
     </div>
 
-    <div style='height: 50vh;'>
-    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
