--- a/23/index.html
+++ b/23/index.html
@@ -25,13 +25,18 @@
         <div class='element-23'>
             <div class='margin-div-23'></div>
             <div class="maintext-23">
-                <h2>Lorem ipsum dolor sit amet</h2>
+                <div class='maintext-mob-23'>
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                </div>
+                <img class='d-md-none' src='https://via.placeholder.com/500x500'>
+                <div class='extratext-mob-23 d-md-none'>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </div>
             </div>
             <div class='left-23'>
                 <div class='extratext-23'>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ad dolores consequatur voluptate,
-                    tempore sit eveniet dolorem repudiandae iste, velit quos quidem accusamus aperiam vel incidunt quis?
-                    Exercitationem, culpa explicabo?
+                    tempore sit eveniet dolorem repudiandae iste, velit quos
                 </div>
                 <div class='ltext-23 text-23'>
                     L
@@ -47,7 +52,7 @@
         </div>
     </div>
 
-    <div style='height: 100vh;background-color: red;'>
+    <div style='height: 60vh;background-color: red;'>
     </div>
 
 
