--- a/carousel/index.html
+++ b/carousel/index.html
@@ -22,12 +22,77 @@
 <body>
 
     <div class="owl-carousel owl-theme">
-        <div class="item"> <img src='https://via.placeholder.com/1000x400/abc.png'> </div>
-        <div class="item"> <img src='https://via.placeholder.com/1000x400/c3c.png'> </div>
-        <div class="item"> <img src='https://via.placeholder.com/1000x400/33c.png'> </div>
-        <div class="item"> <img src='https://via.placeholder.com/1000x400/135.png'> </div>
-        <div class="item"> <img src='https://via.placeholder.com/1000x400/3c3.png'> </div>
-      </div>
+        <div class="item">
+            <video muted class='carousel-content'>
+                <source class="owl-lazy" src="https://static.videezy.com/system/resources/previews/000/034/539/original/point-side2.mp4" type="video/mp4"
+                    alt="Chris standing up holding his daughter Elva">
+            </video>
+        </div>
+        <div class="item">
+            <video autoplay muted class='carousel-content'>
+                <source class="owl-lazy" src="https://static.videezy.com/system/resources/previews/000/019/700/original/pointing-orange.mp4" type="video/mp4"
+                    alt="Chris standing up holding his daughter Elva">
+            </video>
+        </div>
+        <div class="item">
+            <picture class='carousel-content'>
+                <source class="owl-lazy" media="(max-width: 767px)" data-srcset="https://via.placeholder.com/400x400/33c.png">
+                <source class="owl-lazy" media="(min-width: 768px)" data-srcset="https://via.placeholder.com/1000x400/3c3.png">
+                <img class="owl-lazy" data-src="https://via.placeholder.com/1000x400/c33.png"
+                    alt="Chris standing up holding his daughter Elva">
+            </picture>
+        </div>
+        <div class="item">
+            <video autoplay muted class='carousel-content'>
+                <source class="owl-lazy" src="https://static.videezy.com/system/resources/previews/000/019/700/original/pointing-orange.mp4" type="video/mp4"
+                    alt="Chris standing up holding his daughter Elva">
+            </video>
+        </div>
+        <div class="item">
+            <video autoplay muted class='carousel-content'>
+                <source class="owl-lazy" src="https://static.videezy.com/system/resources/previews/000/019/700/original/pointing-orange.mp4" type="video/mp4"
+                    alt="Chris standing up holding his daughter Elva">
+            </video>
+        </div>
+        <div class="item">
+            <picture class='carousel-content'>
+                <source class="owl-lazy" media="(max-width: 767px)" data-srcset="https://via.placeholder.com/400x400/c33.png">
+                <source class="owl-lazy" media="(min-width: 768px)" data-srcset="https://via.placeholder.com/1000x400/c33.png">
+                <img class="owl-lazy" data-src="https://via.placeholder.com/1000x400/abc.png"
+                    alt="Chris standing up holding his daughter Elva">
+            </picture>
+        </div>
+        <div class="item">
+            <video muted class='carousel-content'>
+                <source class="owl-lazy" src="https://archive.org/download/BigBuckBunny_124/Content/big_buck_bunny_720p_surround.mp4" type="video/mp4"
+                    alt="Chris standing up holding his daughter Elva">
+            </video>
+        </div>
+        <div class="item">
+            <picture class='carousel-content'>
+                <source class="owl-lazy" media="(max-width: 767px)" data-srcset="https://via.placeholder.com/400x400/33c.png">
+                <source class="owl-lazy" media="(min-width: 768px)" data-srcset="https://via.placeholder.com/1000x400/33c.png">
+                <img class="owl-lazy" data-src="https://via.placeholder.com/1000x400/abc.png"
+                    alt="Chris standing up holding his daughter Elva">
+            </picture>
+        </div>
+        <div class="item">
+            <picture class='carousel-content'>
+                <source class="owl-lazy" media="(max-width: 767px)" data-srcset="https://via.placeholder.com/400x400/1c2.png">
+                <source class="owl-lazy" media="(min-width: 768px)" data-srcset="https://via.placeholder.com/1000x400/2c3.png">
+                <img class="owl-lazy" data-src="https://via.placeholder.com/1000x400/abc.png"
+                    alt="Chris standing up holding his daughter Elva">
+            </picture>
+        </div>
+        <div class="item">
+            <picture class='carousel-content'>
+                <source class="owl-lazy" media="(max-width: 767px)" data-srcset="https://via.placeholder.com/400x400/dba.png">
+                <source class="owl-lazy" media="(min-width: 768px)" data-srcset="https://via.placeholder.com/1000x400/abd.png">
+                <img class="owl-lazy" data-src="https://via.placeholder.com/1000x400/abc.png"
+                    alt="Chris standing up holding his daughter Elva">
+            </picture>
+        </div>
+    </div>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
